# SCP

./: .gitignore  CMakeHelloWorld.cbp  CMakeLists.txt
include/apps/kv-stores/comet/: server.hpp
include/asteroid/: stellarkv.hpp
include/comet/: client.hpp  misc.hpp  server.hpp
include/rpc-layer/: RPC.hpp  fakeRPC.hpp
include/scp/: ballot.hpp  message.hpp  node.hpp  quorum.hpp  slot.hpp
include/util/: common.hpp  hash.hpp  queue.hpp
src/: CMakeLists.txt  Makefile
src/apps/kv-stores/asteroid/: main.cpp  stellarkv.cpp
src/apps/kv-stores/comet/: client.cpp  main.cpp  server.cpp
src/asteroid/: CMakeLists.txt  main.cpp  stellarkv.cpp
src/comet/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
src/rpc-layer/: CMakeLists.txt  fakeRPC.cpp
src/scp/: CMakeLists.txt  message.cpp  message.hpp  node.cpp  slot.cpp
